--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@
 									<div class="info-speaker-highlight">
 										<h3> Jonathan Sampson </h3>
 										<h4 class="yellow">Microsoft</h4>
-										<p>Desenvolvedor web que mora em Redmond, Washington, nos Eua. Durante o dia, trabalha como Program Manager no time do Microsoft Edge, na sede da Microsoft Corporation. É um defensor da comunidade web e do software open-source. <S></S>erviu como moderador do StackOverflow de Fevereiro de 2010 - Março de 2013.</p>
+										<p>Desenvolvedor web que mora em Redmond, Washington, nos Eua. Durante o dia, trabalha como Program Manager no time do Microsoft Edge, na sede da Microsoft Corporation. É um defensor da comunidade web e do software open-source. Serviu como moderador do StackOverflow de Fevereiro de 2010 - Março de 2013.</p>
 										<div class="social-speaker">
 											<a href="https://twitter.com/jonathansampson" class="item-social-speaker" title="Twitter"><img src="/images/twitter.svg" alt="icon twitter"></a>
 											<a href="https://github.com/jonathansampson" class="item-social-speaker" title="Github"><img src="/images/github.svg" alt="icon github"></a>
@@ -1288,7 +1288,7 @@
                             Windows usando os mesmos frameworks que usam para a web. Mas
                             aplicativos mobile carregam expectativas diferentes! Os usuários esperam
                             uma "experiência nativa" - por exemplo, slick animations, transições fluídas
-                            nas páginias, feedback visual instantâneo. Conversando com desenvolvedores
+                            nas páginas, feedback visual instantâneo. Conversando com desenvolvedores
                             de control frameworks populares (e.g. Ionic, Famous, WinJS), tenho
                             entendido o que eles pensam sobre construir aplicativos híbridos com
                             performance. Nessa sessão, compartilharemos esses conhecimentos e
