--- a/index.html
+++ b/index.html
@@ -70,8 +70,9 @@
                             <span class="birthday hidden-xs">Venha fazer parte do <span>único evento de javascript</span> que homenageia as Olimpíadas.</span>
                             <a class="button button-ticket" target="_blank" href="http://www.eventick.com.br/braziljs-2016" title="Comprar Ticket">
                                 <div>
-                                    <h4>Comprar Ticket</h4>
-                                    <span class="hidden-xs">Super early bird</span>
+                                    <h4 style="text-decoration: line-through;">Comprar Ticket</h4>
+                                    <span class="hidden-xs"><span style="text-decoration: line-through;">Super early bird</span> ESGOTADO!</span>
+                                    <div>Em breve novo lote, aguarde!</div>
                                 </div>
                             </a>
                             <div class="bg-info-intro"><img src="/images/bg-info-intro-teaser.png" alt="background intro"></div>
